# ASI_2026_PJATK

./: .gitignore  .pylintrc  README.md  environment.yml  environment_full.yml  initialize_kedro.py  pyproject.toml  requirements-ci.txt  requirements-local.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  continuous-training.yml
conf/base/: catalog.yml  logging.yml  parameters.yml
data/processed/: X_test_baseline.csv  games_columns.txt  games_details_columns.txt  games_details_sample.csv  games_sample.csv  nba_features_basic_columns.txt  nba_features_basic_sample.csv  nba_features_pregame_columns.txt  nba_features_pregame_sample.csv  y_test_baseline.csv
data/raw/: README.md
docs/: architecture.md  notebook_description.md  project_checklist.md
models/: autogluon_predictor.pkl
models/autogluon_predictor/: learner.pkl  metadata.json  predictor.pkl
notebooks/: asi_nba-2.ipynb
reports/: autogluon_metrics.yml  baseline_metrics.csv  baseline_metrics.yml
scripts/: colab_export.py  create_initial_samples.py  export_notebook_code.py  tmp_team_names.py
src/: features.py  model_loader.py  pipeline.py  train.py
src/api/: app.py  config.py  main.py  schemas.py
src/monitoring/: drift_detector.py
src/nba_kedro/: __init__.py  pipeline.py  pipeline_registry.py  runner.py
src/nba_kedro/nodes/: __init__.py  data_loading.py  feature_engineering.py  model_evaluation.py  model_training.py
tests/: test_api.py
