[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba_prediction"
version = "0.1.0"
description = "NBA prediction Kedro pipeline"
readme = "README.md"
requires-python = ">=3.10"

[tool.kedro]
package_name = "nba_kedro"
project_name = "NBA Prediction"
kedro_init_version = "0.18.14"
source_dir = "src"
